--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -7,7 +7,7 @@
     }
 }
 @mixin mediamd {
-    @media screen and (min-width:720px){
+    @media screen and (max-width:720px){
 @content;
 
     }
@@ -24,51 +24,7 @@
 }
 
 
-@include mediasm{
-#showcase{
-    width: 100%;
-    height: 100%;
-   h1{
-       font-size:3rem;
-   }
-  
-  .hitman{
-      margin-top:7rem;
-      height: 100%;
-  }
-   
-}
-#earn-section{
-    margin-top:2rem;
-    & .collector{
-        margin-top:2rem;
-    }
-}
 
-#featured-section{
-    margin-top:4rem;
-
-    
-    }
-    #cut-edge{
-        width:100%;
-        height: 5rem;
-        background: #fff;
-        clip-path: polygon(0 0,100% 0,100% calc(100% - 10vw),0 100%);
-        margin-bottom: -20vw;
-        }
-        #review-section{
-
-            & img{
-                max-width:6rem;
-                height:6rem;
-            }
-            
-            }
-
-
-
-}
 
 
 
