--- a/sass/_dashboard.scss
+++ b/sass/_dashboard.scss
@@ -90,7 +90,34 @@ height:7rem;
 
 }
 
+#userprofile{
+margin-top:4rem;
 
+& .img-wrapper{
+width: 100%;
+height:100%;
+img{
+    width:100%;
+    height:15rem;
+}
+
+}
+& .todo{
+display: flex;
+justify-content: space-between;
+font-size: .8rem;
+}
+.varify-section{
+    img{
+        max-width:1.5rem; 
+        height
+        :1.5rem;  
+    }
+}
+}
+ul{
+    list-style: none;
+}
 
 
 
@@ -115,6 +142,7 @@ margin-top:4rem;
 
 
 }
+
 
 }
 
