--- a/css/styless.css
+++ b/css/styless.css
@@ -6,12 +6,17 @@
   display: block;
   overflow: hidden;
 }
+/* fieldset{
+  width:100%;
+  height: 200vh;
+} */
 .multi_step_form #msform {
   text-align: center;
   position: relative;
 
-  min-height: 820px;
+  
   max-width: 810px;
+  height: 850px;
   margin: 0 auto;
   background: #ffffff;
   z-index: 1;
@@ -31,7 +36,7 @@
 }
 .multi_step_form #msform fieldset {
   border: 0;
-  padding: 20px 105px 0;
+  padding: 20px 20px 0;
   position: relative;
   width: 100%;
   left: 0;
@@ -199,14 +204,14 @@
   color: #5f6771;
   padding: 0;
 }
-.multi_step_form #msform fieldset .input-group {
+/* .multi_step_form #msform fieldset .input-group {
   padding-bottom: 40px;
-}
-.multi_step_form #msform fieldset .input-group .custom-file {
+} */
+/* .multi_step_form #msform fieldset .input-group .custom-file {
   width: 100%;
   height: auto;
-}
-.multi_step_form #msform fieldset .input-group .custom-file .custom-file-label {
+} */
+/* .multi_step_form #msform fieldset .input-group .custom-file .custom-file-label {
   width: 168px;
   border-radius: 5px;
   cursor: pointer;
@@ -215,8 +220,8 @@
   text-align: center;
   transition: all 300ms linear 0s;
   color: #5f6771;
-}
-.multi_step_form #msform fieldset .input-group .custom-file .custom-file-label i {
+} */
+/* .multi_step_form #msform fieldset .input-group .custom-file .custom-file-label i {
   font-size: 20px;
   padding-right: 10px;
 }
@@ -224,8 +229,8 @@
   background: #5cb85c;
   border-color: #5cb85c;
   color: #fff;
-}
-.multi_step_form #msform fieldset .input-group .custom-file input {
+} */
+/* .multi_step_form #msform fieldset .input-group .custom-file input {
   display: none;
 }
 .multi_step_form #msform fieldset .file_added {
@@ -250,7 +255,7 @@
   position: absolute;
   left: 0;
   transform: rotate(20deg);
-}
+} */
 .multi_step_form #msform #progressbar {
   margin-bottom: 30px;
   overflow: hidden;
@@ -327,4 +332,15 @@
   background: #405867;
   border-color: #405867;
   color: #fff;
+}
+@media(max-width:800px){
+
+.multi_step_form #msform{
+width:100%;
+height:1130px;
+
+
+  }
+
+
 }
